<resources>
    <string name="app_name">new</string>
    <string name="welcome_to_text_scanner">Welcome to Text Scanner</string>
    <string name="capture">Capture Image</string>
    <string name="result">Result</string>
    <string name="snap">Snap</string>
    <string name="detect_text">Detect text</string>
    <string name="todo">TODO</string>
    <string name="upload">Upload Image</string>
    <string name="title_activity_upload">uploadActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="save">Save</string>
    <string name="save_as_doc">Save as Doc</string>
    <string name="save_as_pdf">Save as PDF</string>
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="help">Help</string>
    <string name="upload_document">Upload Document</string>
    <string name="list_of_commands">List of Commands: \n\n1.Open Camera\n2.Upload Image\n3.Upload Document\n4.read text again\n5.Save as Text\n6.Save as PDF\n7.Go back</string>
    <string name="description_of_commands">Open Camera:-Open the camera to capture an image\n\nUpload Image:-Open the image picker interface to pick an image from device storage\n\nUpload Document:-Opens the document picker interface to select a document to upload\n\nRead Text Again:-Read the text again\n\nSave as Text Document:-Save the text as document\n\nSave as PDF:-Save the text as PDF\n\nGo back:-Go back to home page</string>
    <string name="text_recognition">Text Recognition</string>
    <string name="text_recognition_engine">Text Recognition Engine</string>
    <string name="speech_recognition_voice_commands">Speech Recognition / Voice Commands</string>
    <string name="speech_output">Speech Output</string>
    <string name="speech_recognition_voice_command">Speech Recognition/Voice Command</string>
    <string name="speech_recognition">Speech Recognition</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="feedback">Feedback</string>
    <string name="support_guidance">Support / Guidance</string>
    <string name="text_recognition_language">Text Recognition Language</string>
    <string name="theme">Theme</string>
    <string name="Theme">\nTheme</string>
    <string name="style">Style</string>
    <string name="text_size">Text Size</string>
    <string name="sound_preferences">Sound Preferences</string>
    <string name="pitch_rate">Pitch Rate</string>
    <string name="volume">Volume</string>
    <string name="light">Light</string>
    <string name="apply">Apply</string>
    <string name="dark">Dark</string>
    <string name="optimal">Optimal</string>
    <string name="hello_user">Hello User</string>

    <string name="deafult_theme">Deafult Theme</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_an_user_login">Already an user / Login</string>
    <string name="login">Login</string>
    <string name="not_yet_registered_sign_up">Not yet Registered? Sign up</string>
    <string name="login_register">LogIn/Register</string>
    <string name="saving">Saving...</string>
    <string name="upload_to_cloud">Upload to Cloud</string>
    <string name="welcome">Welcome</string>
    <string name="save_online">Save Online</string>
    <string name="user_name">User Name</string>
</resources>