<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8DD0D8"
    android:orientation="vertical"
    tools:context=".Settings">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="30sp"/>
    <Button
        android:id="@+id/saveSettings"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"/>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_layout"
        android:backgroundTint="#00BCD4"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_recognition"
            android:textColor="#000"
            android:layout_marginHorizontal="10dp"

            android:layout_marginVertical="20dp"
            android:background="#00BCD4"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/text_recognition_engine"
                android:layout_marginEnd="60dp"
                android:textColor="#000"
                android:layout_height="wrap_content"
                />
            <Spinner
                android:id="@+id/engine_spinner"
                android:background="#CAC2C2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="#FFF"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/text_recognition_language"
                android:layout_marginEnd="40dp"
                android:layout_height="wrap_content"
                android:textColor="#000"
                />
            <Spinner
                android:id="@+id/language_spinner"
                android:background="#CAC2C2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_layout"
        android:backgroundTint="#00BCD4"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speech_recognition_voice_command"
            android:layout_marginHorizontal="10dp"
            android:textColor="#000"
            android:layout_marginVertical="20dp"
            android:background="#00BCD4"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/speech_output"
                android:textColor="#000"
                android:layout_marginEnd="70dp"
                android:layout_height="wrap_content"
                />
            <Switch
                android:id="@+id/speechOutput"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="#FFF"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/speech_recognition"
                android:layout_marginEnd="40dp"
                android:textColor="#000"
                android:layout_height="wrap_content"
                />
            <Switch
                android:id="@+id/speech_recognition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_layout"
        android:backgroundTint="#00BCD4"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support_guidance"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:textColor="#000"
            android:background="#00BCD4"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            android:background="#00BCD4"
            android:orientation="horizontal">
            <Button
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:text="@string/help"
                android:layout_marginEnd="70dp"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="#00BCD4"
            android:orientation="horizontal">


        </LinearLayout>
    </LinearLayout>


</LinearLayout>