<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/captureImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/capture"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:background="@drawable/next_page"
        />
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/scannermachine"
        android:layout_marginTop="150dp"
        android:id="@+id/myImage"
        android:importantForAccessibility="no" />
    <TextView
        android:id="@id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/myImage"
        android:text="@string/welcome_to_text_scanner"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="#144A88"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        />
    <Button
        android:id="@+id/uploadImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/captureImg"
        android:layout_centerHorizontal="true"
        android:text="@string/upload"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/uploadDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/uploadImg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/upload_document"
        android:textAllCaps="false"
        />
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#55605A"
        android:elevation="4dp"
        app:titleTextColor="@android:color/white" />
</RelativeLayout>