<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".upload">
    <ImageView
        android:id="@+id/uploadImgView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:foregroundGravity="center"
        android:maxHeight="300dp"
        android:maxWidth="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:contentDescription="@string/todo" />
    <ScrollView
        android:id="@+id/uploadSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="400dp"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/uploadtxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/result"
            android:textSize="25sp" />
    </ScrollView>

    <Button
        android:id="@+id/uploadDetect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/uploadSV"
        android:layout_centerHorizontal="true"
        android:text="@string/detect_text"
        android:gravity="center"/>
</RelativeLayout>